# sqlx-lsp

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
editors/vscode/: README.md  extension.js  package-lock.json  package.json
editors/vscode/syntaxes/: sqlx-sql.injection.tmLanguage.json
src/: config.rs  db.rs  document.rs  embedded.rs  introspect.rs  lib.rs  main.rs  parse.rs  schema.rs  server.rs  workspace.rs
src/analysis/: actions.rs  completion.rs  definition.rs  diagnostics.rs  hover.rs  mod.rs  resolve.rs  semantic_tokens.rs  symbols.rs
src/introspect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/schema/: ddl.rs  migrations.rs  mod.rs  model.rs
tests/: lsp_reload.rs  mysql.rs  postgres.rs  sqlite.rs
