[package]
name = "sqlx-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
dashmap = "6.2.1"
serde_json = "1.0.150"
sqlparser = { version = "0.62.0", features = ["visitor"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"

[dev-dependencies]
tempfile = "3.27.0"
